--- a/apps/portal/package.json
+++ b/apps/portal/package.json
@@ -9,17 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.89.0",
     "@tailwindcss/postcss": "^4.1.18",
     "next": "^16.1.0",
+    "pdf-parse": "^1.1.1",
     "postcss": "^8.5.6",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
+    "recharts": "^3.6.0",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@types/node": "25.0.3",
     "@types/react": "19.2.7",
+    "@types/react-dom": "^19",
     "typescript": "5.9.3"
   }
 }
