--- a/apps/portal/package.json
+++ b/apps/portal/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:unit": "vitest run --config vitest.config.ts --dir ../testing/unit",
+    "test:rls": "vitest run --config vitest.config.ts --dir ../testing/rls",
+    "test:e2e": "playwright test --config playwright.config.ts",
+    "test:all": "npm run lint && npm run test:unit && npm run test:rls && npm run test:e2e"
   },
   "dependencies": {
     "@supabase/ssr": "^0.8.0",
@@ -24,6 +28,12 @@
     "@types/node": "25.0.3",
     "@types/react": "19.2.7",
     "@types/react-dom": "^19",
-    "typescript": "5.9.3"
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@playwright/test": "^1.55.0",
+    "jsdom": "^26.1.0",
+    "typescript": "5.9.3",
+    "vitest": "^3.2.4"
   }
 }
